tests/should_fail/type_alias_unknown_type.nv
module main

// SHOULD FAIL: type alias using an unknown type name
type Phantom = NonExistentType
println("unreachable")
